2008-01-06  Dalibor Topic  <robilad@kaffe.org>

	* TODO, WHATSNEW: Updated to document removal of binreloc.

2008-01-06  Dalibor Topic  <robilad@kaffe.org>

	* THIRDPARTY: Removed information on binreloc.

	* kaffe/kaffeh/Makefile.am (nodist_kaffeh_SOURCES): Removed binreloc.c.

	* kaffe/kaffevm/Makefile.am (noinst_HEADERS): Removed binreloc.h
	(libkaffe_la_SOURCES): Removed binreloc.c.

	* kaffe/kaffevm/findInJar.c,
	kaffe/kaffevm/external.c,
	kaffe/kaffevm/baseClasses.c,
	kaffe/kaffeh/main.c,
	kaffe/kaffe/main.c: Removed support for binreloc.

	* configure.ac (AM_BINRELOC) Removed. (AC_CONFIG_LINKS)
	Removed linking in of binreloc.

	* kaffe/kaffevm/binreloc.c, kaffe/kaffevm/binreloc.h, m4/binreloc.m4:
	Removed.

2008-01-06  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-01-06  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_HEADER_TIME, AC_STRUCT_TM, AC_STRUCT_TIMEZONE):
	Removed.

2008-01-06  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Removed tests for declared select, crt_externs.h,
	fcntl, finite, fstat, fsync, ftruncate, getrusage, AM_ICONV, ioctl,
	linux/netlink.h, linux/rtnetlink.h, linux/socket.h, netpacket/packet.h,
	munmap, netinet/in.h, netinet/in/systm.h, netinet/tcp.h, net/if.h,
	select, snprintf, strdup, strstr, stropts.h, sync, sysconf, syslog.h,
	sys/sockio.h, time.h, utime.h, wtypes.h.

2008-01-06  Dalibor Topic  <robilad@kaffe.org>
	
	* TODO: Updated.

2008-01-06  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Don't check for socket, getsockname, mkdir, rmdir,
	chdir, localtime, mincore, msync, madvise, remainder, remainderf,
	drem, rint, strtod, mergesort, strtol, strtoul, finite, broken strtod,
	hstrerr, strerr_r, waitpid, kill, execvp, execve, fork.
	
	* config/config-math.h (IEEERemainder, IEEERemainderf, rint) Removed.

	* config/i386/drops/md.c (waitpid, kill, execvp, fork): Removed.

	* config/sparc/sunos4/md.h,
	config/mips/ultrix4/md.h,